; ModuleID = '/home/carl/AnghaBench/redis/src/extr_hyperloglog.c_hllAdd.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_hyperloglog.c_hllAdd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.hllhdr* }
%struct.hllhdr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hllAdd(%struct.TYPE_4__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.hllhdr*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.hllhdr*, %struct.hllhdr** %10, align 8
  store %struct.hllhdr* %11, %struct.hllhdr** %8, align 8
  %12 = load %struct.hllhdr*, %struct.hllhdr** %8, align 8
  %13 = getelementptr inbounds %struct.hllhdr, %struct.hllhdr* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  switch i32 %14, label %27 [
    i32 129, label %15
    i32 128, label %22
  ]

15:                                               ; preds = %3
  %16 = load %struct.hllhdr*, %struct.hllhdr** %8, align 8
  %17 = getelementptr inbounds %struct.hllhdr, %struct.hllhdr* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @hllDenseAdd(i32 %18, i8* %19, i64 %20)
  store i32 %21, i32* %4, align 4
  br label %28

22:                                               ; preds = %3
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = load i64, i64* %7, align 8
  %26 = call i32 @hllSparseAdd(%struct.TYPE_4__* %23, i8* %24, i64 %25)
  store i32 %26, i32* %4, align 4
  br label %28

27:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %28

28:                                               ; preds = %27, %22, %15
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @hllDenseAdd(i32, i8*, i64) #1

declare dso_local i32 @hllSparseAdd(%struct.TYPE_4__*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
